--- a/frontend/public/md_pages/lut_module.mdx
+++ b/frontend/public/md_pages/lut_module.mdx
@@ -34,7 +34,7 @@ LUT-yliopisto tarjoaa ohjelmistotuotannon opintoja joustavina etäopintoina. Opi
   * Ilmoittautuminen: 29.11. klo 8.00 &mdash; 12.12.2022
 </CustomModuleCourse>
 
-<OutboundLink eventLabel="custom: lut-ohjelmistotuotanto" to="https://www.lut.fi/fi/opiskelu/avoin-yliopisto/avoimen-yliopiston-opintotarjonta/ohjelmistotuotannon-opintokokonaisuus">Lue lisää kursseista ja ilmoittautumisesta LUTin sivuilta.</OutboundLink>
+<OutboundLink href="https://www.lut.fi/fi/opiskelu/avoin-yliopisto/avoimen-yliopiston-opintotarjonta/ohjelmistotuotannon-opintokokonaisuus">Lue lisää kursseista ja ilmoittautumisesta LUTin sivuilta.</OutboundLink>
 
 </CustomModuleContent>
 export default ({ children }) => (
