summary page now shows only one course at a time

--- a/frontend/translations/profile/en.json
+++ b/frontend/translations/profile/en.json
@@ -77,5 +77,6 @@
     "toggleOrder": "Toggle sort order",
     "orderAscending": "Ascending",
     "orderDescending": "Descending",
-    "pointsRequired": "required"
+    "pointsRequired": "required",
+    "selectedCourse": "Selected course"
 }
