--- a/frontend/translations/profile/fi.json
+++ b/frontend/translations/profile/fi.json
@@ -77,5 +77,6 @@
     "toggleOrder": "Käännä suunta",
     "orderAscending": "Nouseva",
     "orderDescending": "Laskeva",
-    "pointsRequired": "vaaditaan"
+    "pointsRequired": "vaaditaan",
+    "selectedCourse": "Valittu kurssi"
 }
