a simpler marker for progress

--- a/frontend/translations/common/se.json
+++ b/frontend/translations/common/se.json
@@ -71,5 +71,6 @@
     "ectsHoursExplanation1": "The estimated workload of the course, which is estimated based on the ECTS received from the course. The course awards",
     "ectsHoursExplanation2": "ECTS. At the University of Helsinki, one ECTS requires approximately 27 hours of work.",
     "fi": "Suomeksi",
-    "en": "In English"
+    "en": "In English",
+    "required": "required"
 }
