--- a/frontend/translations/common/fi.json
+++ b/frontend/translations/common/fi.json
@@ -71,6 +71,7 @@
     "showCourse": "Näytä kurssi",
     "ectsHoursExplanation1": "Kurssin arvoitu työmäärä, joka on arvioitu kurssista saatavien opintopisteiden perusteella. Kurssista saa ",
     "ectsHoursExplanation2": "opintopistettä. Helsingin yliopistolla yksi opintopiste vaatii noin 27 tunnin työmäärää.",
-    "noResults": "Ei tuloksia"
+    "noResults": "Ei tuloksia",
+    "required": "vaaditaan"
 }
 
