some refactoring on new editor controlled fields

--- a/frontend/translations/common/en.json
+++ b/frontend/translations/common/en.json
@@ -1,16 +1,14 @@
 {
-    "login": "Log in with your mooc.fi account",
+    "login": "Log in with your MOOC.fi account",
     "loginShort": "Log in",
     "signUp":"Sign up",
     "logout": "Log out",
-    "loginDetails": "Already registered for a course? Login with the details you used to register for a course.",
     "profile": "My profile",
     "forgottenpw": "Forgot your password?",
-    "error": "Login failed. Wrong password or email address/username",
     "password": "Password",
     "username": "Email or username",
     "skiplink": "To main content",
-    "errorTitle": "An error has occured",
+    "errorTitle": "An error has occurred",
     "loadMore": "Load more",
     "confirmationUnsavedChanges": "You have unsaved changes",
     "confirmationLeaveWithoutSaving": "Are you sure you want to leave without saving?",
