--- a/frontend/translations/courses/en.json
+++ b/frontend/translations/courses/en.json
@@ -36,7 +36,7 @@
   "confirmationNo": "No",
   "courseLanguage": "Language",
   "courseDescription": "Description",
-  "courseInstructions": "Instructions",
+  "courseInstructions": "Completion instructions",
   "courseLink": "Link",
   "courseOpenCode": "Open university course code",
   "courseOpenLink": "Open university course link",
