--- a/frontend/translations/courses/fi.json
+++ b/frontend/translations/courses/fi.json
@@ -36,7 +36,7 @@
   "confirmationNo": "Ei",
   "courseLanguage": "Kieli",
   "courseDescription": "Kuvaus",
-  "courseInstructions": "Instructions",
+  "courseInstructions": "Rekisteröitymisohjeet",
   "courseLink": "Linkki",
   "courseOpenCode": "Avoimen yliopiston kurssikoodi",
   "courseOpenLink": "Avoimen yliopiston kurssilinkki",
