--- a/frontend/translations/sign-up/fi.json
+++ b/frontend/translations/sign-up/fi.json
@@ -14,7 +14,7 @@
     "formInfoText":"Tällä sivulla voit luoda uuden tunnuksen, joka toimii suurimmassa osassa mooc.fi:n kursseissa ja palveluissa. Jos olet aikaisemmin tehnyt mooc.fi -kursseja, voit käyttää sisäänkirjautumissivulla olemassaolevia tunnuksiasi.",
     "error": "Virhe: ",
     "signIn": "Onko sinulla jo käyttäjätunnus? Kirjaudu sisään",
-    "confirmEmailTitle": "Mooc.fi käyttäjätunnuksesi on luotu",
+    "confirmEmailTitle": "MOOC.fi -käyttäjätunnuksesi on luotu",
     "confirmEmailInfo": "Olemme lähettäneet sähköpostiisi sähköpostiosoitteen varmistuslinkin. Käy nyt sähköpostissasi ja varmista osoitteesi.",
     "submit": "Lähetä",
     "errorResearchSubmit": "Virhe vastauksen tallennuksessa. Voit yrittää vastata myöhemmin uudelleen profiilisivullasi."
