study module editor works; need to fix legacy editors

--- a/frontend/translations/courses/en.json
+++ b/frontend/translations/courses/en.json
@@ -15,6 +15,7 @@
   "courseSlug": "Slug",
   "courseSlugHelper": "Make sure the slug is the same as the slug on the course settings",
   "courseECTS": "ECTS",
+  "courseECTSShort": "ECTS",
   "courseID": "Course ID",
   "courseStatus": "Status",
   "courseOrder": "Order",
@@ -70,10 +71,6 @@
   "validationInteger": "must be integer",
   "validationNumberRange": "must be a number or a range",
   "validationValidUrl": "must be a valid URL",
-  "statusSaving": "Saving...",
-  "statusSavingSuccess": "Saved successfully",
-  "statusSavingError": "Error while saving",
-  "statusValidationErrors": "There are errors in the form",
   "courseLanguageSelectTitle": "Which languages of MOOC.fi website do you want the course to be visible in?",
   "courseLanguageVersion": "Language version",
   "courseStartDateRequired": "You must provide start date",
@@ -91,6 +88,7 @@
   "courseSupportEmail": "Course support email",
   "courseVariantsTitle": "Course variants",
   "courseUserCourseSettingsVisibility": "User count visibility",
+  "courseUserCourseSettingsVisibilityLabel": "Languages where user count is visible",
   "courseAliasesTitle": "Course aliases",
   "courseUpcomingActiveLink": "Course link active on upcoming course",
   "importPhotoButton": "Import photo from another course...",
@@ -103,6 +101,9 @@
   "courseAutomaticCompletionsEligibleForEcts": "Automatic completions eligible for ECTS",
   "coursePointsNeeded": "Points needed",
   "courseExerciseCompletionsNeeded": "Exercise completions needed",
+  "courseCompletionsHandledBy": "Completions handled by",
+  "courseInheritSettingsFrom": "Inherit settings from",
+  "courseTier": "Tier",
   "courseNewCourse": "New course",
   "helpSlug": "A slug is a unique identifier for a course, ie. elements-of-ai, ohpe.",
   "helpName": "Course name -- usually the course name visible to the user comes from the translation, but keep this descriptive as well.",
