--- a/frontend/translations/courses/fi.json
+++ b/frontend/translations/courses/fi.json
@@ -16,6 +16,7 @@
   "courseSlugHelper": "Varmista että slug on sama kuin kurssin asetuksiin määritelty slug",
   "courseID": "Kurssin tietokanta-ID",
   "courseECTS": "Opintopisteet",
+  "courseECTSShort": "op",
   "courseStatus": "Tila",
   "courseOrder": "Järjestys",
   "courseModuleOrder": "Järjestys modulin sisällä",
@@ -70,10 +71,6 @@
   "validationInteger": "vaaditaan kokonaisluku",
   "validationNumberRange": "vaaditaan numero tai arvoalue",
   "validationValidUrl": "tulee olla validi URL",
-  "statusSaving": "Tallennetaan...",
-  "statusSavingSuccess": "Tallennus onnistui",
-  "statusSavingError": "Virhe tallentaessa",
-  "statusValidationErrors": "Lomakkeessa on virheitä",
   "courseLanguageSelectTitle": "Missä MOOC.fi-sivun kieliversiossa haluat kurssin näkyvän?",
   "courseLanguageVersion": "Kieliversio",
   "courseStartDateRequired": "Kurssilla on oltava alkamispäivämäärä",
@@ -91,6 +88,7 @@
   "courseSupportEmail": "Kurssin tukisähköpostiosoite",
   "courseVariantsTitle": "Kurssivariantit",
   "courseUserCourseSettingsVisibility": "Käyttäjämäärä näkyvillä",
+  "courseUserCourseSettingsVisibilityLabel": "Kielet joissa käyttäjämäärä on näkyvillä",
   "courseAliasesTitle": "Kurssialiakset",
   "courseUpcomingActiveLink": "Kurssilinkki aktiivinen kun kurssi tulossa",
   "importPhotoButton": "Tuo kuva toisesta kurssista...",
@@ -99,10 +97,13 @@
   "importPhotoLabel": "Valitse...",
   "importPhotoDialogSelect": "OK",
   "importPhotoDialogCancel": "Peru",
-  "courseAutomaticCompletions": "Automatic completions",
-  "courseAutomaticCompletionsEligibleForEcts": "Automatic completions eligible for ECTS",
-  "coursePointsNeeded": "Points needed",
-  "courseExerciseCompletionsNeeded": "Exercise completions needed",
+  "courseAutomaticCompletions": "Luo suoritus automaattisesti",
+  "courseAutomaticCompletionsEligibleForEcts": "Automaattisesti luodut suoritukset oikeutettu opintopisteisiin",
+  "coursePointsNeeded": "Vähimmäispistemäärä",
+  "courseExerciseCompletionsNeeded": "Tehtäväsuorituksia vähintään",
+  "courseCompletionsHandledBy": "Kurssisuoritukset käsittelevä kurssi",
+  "courseInheritSettingsFrom": "Peri asetukset kurssilta",
+  "courseTier": "Taso",
   "courseNewCourse": "Uusi kurssi",
   "helpSlug": "Slug on kurssin uniikki tunniste, esim. elements-of-ai, ohpe.",
   "helpName": "Kurssin nimi -- yleensä käyttäjälle näkyvä nimi tulee käännöksistä, mutta tämänkin on hyvä olla kuvaava.",
