--- a/frontend/translations/study-modules/en.json
+++ b/frontend/translations/study-modules/en.json
@@ -35,5 +35,6 @@
   "moduleAddTranslation": "Add translation",
   "moduleDetailsTitle":"Study module details",
   "moduleTranslationsTitle":"Language versions",
+  "moduleTranslations": "Translations",
   "modulePhotoTitle": "Photo"
 }
