--- a/frontend/translations/study-modules/fi.json
+++ b/frontend/translations/study-modules/fi.json
@@ -35,6 +35,7 @@
   "moduleAddTranslation": "Lisää käännös",
   "moduleDetailsTitle":"Opintokokonaisuuden tiedot",
   "moduleTranslationsTitle":"Opintokokonaisuuden kieliversiot",
+  "moduleTranslations": "Käännökset",
   "modulePhotoTitle": "Kuva"
 
 }
