--- a/frontend/translations/common/en.json
+++ b/frontend/translations/common/en.json
@@ -71,5 +71,12 @@
     "showCourse": "Show course",
     "ectsHoursExplanation1": "The estimated workload of the course, which is estimated based on the ECTS received from the course. The course awards",
     "ectsHoursExplanation2": "ECTS. At the University of Helsinki, one ECTS requires approximately 27 hours of work.",
-    "noResults": "No results"
-}
+    "noResults": "No results",
+    "noFields": "No fields",
+    "add": "Add",
+    "remove": "Remove",
+    "statusSaving": "Saving...",
+    "statusSavingSuccess": "Saved successfully",
+    "statusSavingError": "Error while saving",
+    "statusValidationErrors": "There are errors in the form"
+} 
