--- a/frontend/translations/pages/fi.json
+++ b/frontend/translations/pages/fi.json
@@ -33,6 +33,39 @@
     "/faq/[topic]": "Usein kysytyt kysymykset - {{title}}",
     "/": "Etusivu"
   },
+  "titleTemplate": {
+    "/courses": "Kurssit",
+    "/courses/[slug]": "Kurssin ohjausnäkymä - %s", 
+    "/courses/[slug]/edit": "Muokkaa kurssia - %s", 
+    "/courses/[slug]/completions": "Suoritukset - %s", 
+    "/courses/[slug]/points": "Pisteet - %s", 
+    "/courses/new": "Uusi kurssi",
+    "/installation/netbeans/": "NetBeansin asennus",
+    "/installation/vscode/": "VSCoden asennus",
+    "/installation/tmc-cli/": "TMC CLI:n asennus",
+    "/profile": "Oma profiili",
+    "/profile/completions": "Omat suoritukset",
+    "/profile/points": "Omat pisteet",
+    "/study-modules": "Opintokokonaisuudet",
+    "/study-modules/[slug]/edit": "Muokkaa opintokokonaisuutta - %s",
+    "/study-modules/new": "Uusi opintokokonaisuus",
+    "/users/[id]": "Käyttäjä - %s",
+    "/users/[id]/completions": "Suoritukset - %s",
+    "/users/[id]/summary": "Yhteenveto - %s",
+    "/users/search/[[...text]]": "Hae käyttäjiä - %s",
+    "/users": "Käyttäjät",
+    "/sign-in": "Kirjaudu",
+    "/sign-up": "Rekisteröidy",
+    "/teachers": "Opettajille",
+    "/register": "Rekisteröidy organisaatioon",
+    "/register-completion/[slug]": "Rekisteröi suoritus - %s",
+    "/email-templates": "Email-mallit",
+    "/email-templates/[id]": "Muokkaa email-mallia - %s",
+    "/research-consent": "Osallistuminen tutkimukseen",
+    "/register-completion": "Rekisteröi suoritus",
+    "/faq/[[...topic]]": "Usein kysytyt kysymykset - %s",
+    "/": "Etusivu"
+  },
   "breadcrumb": {
     "/courses/[slug]": "Kurssin ohjausnäkymä", 
     "/courses/[slug]/edit": "Muokkaa", 
