--- a/frontend/translations/courses/en.json
+++ b/frontend/translations/courses/en.json
@@ -118,7 +118,11 @@
   "helpCourseAutomaticCompletionsEligibleForEcts": "If the course has automatic completions, are they eligible for ECTS?",
   "helpCourseInstanceLanguage": "Language (en, fi, en-ie etc.) of the course instance. This will be used in the course completion. If this is a handler course, ie. a parent course for specific instance courses, then this setting will not have any effect - the completion language will be taken from the specific instance (ie. language version).",
   "invalidDate": "Invalid date format or date missing",
-  "tabCourseInfo": "Course info",
-  "tabCourseStatus": "Course status",
-  "tabCourseAdvanced": "Advanced"
+  "tabCourseInfo": "Basic info",
+  "tabCourseSettings": "Settings",
+  "tabCourseAdvanced": "Advanced",
+  "tabCourseInfoTitle": "Basic course info",
+  "tabCourseSettingsTitle": "Course settings",
+  "tabCourseAdvancedTitle": "Advanced course settings",
+  "tabHasErrors": "(has errors or required fields)"
 }
