--- a/frontend/translations/pages/en.json
+++ b/frontend/translations/pages/en.json
@@ -33,6 +33,39 @@
     "/faq/[topic]": "Usein kysytyt kysymykset - {{title}}",
     "/": "Home"
   },
+  "titleTemplate": {
+    "/courses": "Courses",
+    "/courses/[slug]": "Course dashboard - %s", 
+    "/courses/[slug]/edit": "Edit course - %s", 
+    "/courses/[slug]/completions": "Completions - %s", 
+    "/courses/[slug]/points": "Points - %s", 
+    "/courses/new": "New course",
+    "/installation/netbeans/": "NetBeans installation",
+    "/installation/vscode/": "VSCode installation",
+    "/installation/tmc-cli/": "TMC CLI installation",
+    "/profile": "My profile",
+    "/profile/completions": "My completions",
+    "/profile/points": "My points",
+    "/study-modules": "Study modules",
+    "/study-modules/[slug]/edit": "Edit study module",
+    "/study-modules/new": "New study module",
+    "/users/[id]": "User - %s",
+    "/users/[id]/completions": "Completions - %s",
+    "/users/[id]/summary": "Summary - %s",
+    "/users/search/[[...text]]": "Search users - %s",
+    "/users": "Users",
+    "/sign-in": "Sign in",
+    "/sign-up": "Sign up",
+    "/teachers": "For teachers",
+    "/register": "Register organization",
+    "/register-completion/[slug]": "Register completion - %s",
+    "/email-templates": "Email templates",
+    "/email-templates/[id]": "Edit email template - %s",
+    "/research-consent": "Research consent",
+    "/register-completion": "Register completion",
+    "/faq/[[...topic]]": "Frequently asked questions - %s",
+    "/": "Home"
+  },
   "breadcrumb": {
     "/courses/[slug]": "Course dashboard",
     "/courses/[slug]/edit": "Edit", 
