--- a/frontend/translations/courses/fi.json
+++ b/frontend/translations/courses/fi.json
@@ -108,8 +108,8 @@
   "helpSlug": "Slug on kurssin uniikki tunniste, esim. elements-of-ai, ohpe.",
   "helpName": "Kurssin nimi -- yleensä käyttäjälle näkyvä nimi tulee käännöksistä, mutta tämänkin on hyvä olla kuvaava.",
   "helpStartPoint": "\"Aloita tästä\"-merkki etusivun kurssikortissa.",
-  "helpHasCertificate": "Myönnetäänkö kurssilta sertifikaatti?",
-  "helpUpcomingActiveLink": "Oletuksena etusivun tulevien kurssien linkki materiaaliin ei toimi. Valitse tämä halutessasi linkin toimivaksi.",
+  "helpHasCertificate": "Myönnetäänkö kurssilta sertifikaatti? Huomaa, että certificates-palvelussa tulee tällöin olla toimiva sertifikaatti samalla slugilla.",
+  "helpUpcomingActiveLink": "Oletuksena etusivulla näkyvissä tulevissa kursseissa linkki materiaaliin on näkyvillä, muttei toimi. Valitse tämä halutessasi linkin toimivaksi.",
   "helpOrder": "Määrää kurssien järjestyksen etusivun listauksessa kurssimodulien ulkopuolella. Käytä mieluummin arvoja tyyliin 100, 200, 300... että väliin on helpompi lisätä uusia.",
   "helpModuleOrder": "Määrää kurssien järjestyksen etusivun kurssimodulilistauksessa.",
   "helpExerciseCompletionsNeeded": "Kuinka monta tehtävää pitää olla suoritettuna läpipääsyyn?",
