--- a/frontend/translations/users/en.json
+++ b/frontend/translations/users/en.json
@@ -6,11 +6,21 @@
   "userFirstName": "First name",
   "userLastName": "Last name",
   "userStudentNumber": "Student number",
+  "userTMCid": "TMC ID",
   "completions": "Completions",
   "summary": "Summary",
   "rowsPerPage": "Rows per page:",
   "displayedRowsOf": " of ",
   "searchByString": "Search by string",
   "searchInCourses": "Search in courses",
-  "searchUser": "Search for another user..."
+  "searchUser": "Search for another user...",
+  "searchInProgress": "Search in progress",
+  "searchFinished": "Search finished",
+  "searchCondition": "condition",
+  "searchField": "field",
+  "searchFieldValue": "value",
+  "searchFieldResultCount": "matches",
+  "searchFieldUniqueResultCount": "unique",
+  "searchCount": "total",
+  "searchResultMeta": "Show search details"
 }
