--- a/frontend/translations/common/se.json
+++ b/frontend/translations/common/se.json
@@ -80,5 +80,9 @@
     "statusSavingError": "Error while saving",
     "statusValidationErrors": "There are errors in the form",
     "required": "required",
-    "close": "Stäng av"
+    "close": "Stäng av",
+    "firstPage": "first page",
+    "lastPage": "last page",
+    "previousPage": "previous page",
+    "nextPage": "next page"
 }
